# cross_service_tempest_plugins

./: README.md  README.rst  inventory  requirements.txt  setup.cfg  setup.py  setup_image.yaml  variables.yaml
ansible/: inventory  setup_image.yaml
ansible/group_vars/: cloud.yaml
ansible/host_vars/: localhost
ansible/roles/configure_devstack/files/: local.conf
ansible/roles/configure_devstack/tasks/: main.yaml
ansible/roles/initial_setup/tasks/: main.yaml
ansible/roles/pre_install_devstack_stuff/files/: pip-preinstall.txt
ansible/roles/pre_install_devstack_stuff/tasks/: main.yaml
ansible/roles/stack_unit/files/: stack.service  stack_service.sh
ansible/roles/stack_unit/tasks/: main.yaml
ansible/roles/stack_user/tasks/: main.yaml
ansible/roles/workshop/tasks/: main.yaml
cross_service_tempest_plugin/: README.rst  config.py  plugin.py
cross_service_tempest_plugin/tests/scenario/: test_cross_service.py
cross_service_tempest_plugin/tests/scenario/templates/: servers_in_existing_neutron_net.yaml
docs/: workshop.rst
group_vars/: cloud.yaml
host_vars/: localhost
roles/configure_devstack/files/: local.conf
roles/pre_install_devstack_stuff/defaults/: main.yaml
roles/pre_install_devstack_stuff/files/: pip-preinstall.txt
roles/pre_install_devstack_stuff/tasks/: main.yaml
roles/stack_user/tasks/: main.yaml
roles/workshop/tasks/: main.yaml
