[metadata]
name = cross_service_tempest_plugin
summary = Workshop Integration Tests
description-file =
    README.rst
author = Andrea Frittoli
author-email = andrea.frittoli@gmail.com
home-page = https://github.com/afrittoli
classifier =
    Environment :: OpenStack
    Environment :: No Input/Output (Daemon)
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Topic :: Internet :: Learning

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    cross_service_tempest_plugins

[entry_points]
tempest.test_plugins =
    cross_service = cross_service_tempest_plugin.plugin:CrossServiceTempestPlugin

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1
